[package]
name = "strontium"
description = "A generic low-level process virtual machine"
version = "0.5.6"
edition = "2018"
authors = ["Moritz Riede <mriede@tuta.io>"]
repository = "https://gitlab.com/strontium-environment/vm"
readme  = "README.md"
license-file = "LICENSE"
keywords = ["vm", "language", "bytecode", "p-code-machine"]

[[bin]]
name = "strontium"
path = "src/main.rs"

[lib]
name = "strontium"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.1"
colored = "2.0.0"
hex   = "0.3.2"
linefeed = "0.6.0"
pest = "2.1.0"
pest_derive = "2.1.0"
