[package]
name = "strontium"
description = "A register-based bytecode machine for statically and dynamically typed programming languages."
version = "0.6.0"
edition = "2018"
authors = ["Moritz Riede <moritz@mriede.com>"]
repository = "https://github.com/mag-language/strontium"
readme  = "README.md"
license-file = "LICENSE"
keywords = ["vm", "language", "bytecode", "p-code-machine"]

# [[bin]]
# name = "strontium"
# path = "src/main.rs"

[lib]
name = "strontium"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
byteorder = "1.3.1"
colored = "2.0.0"
hex   = "0.3.2"
linefeed = "0.6.0"
serde = { version = "1.0", features = ['derive'] }
pest = "2.5"
pest_derive = "2.5"
num-traits = "0.2.17"
num-derive = "0.4.1"
